# apogee

./: .gitattributes  .gitmodules  AUTHORS  CHANGELOG.md  CONTRIBUTING.md  CREDITS  Cargo.toml  README  SECURITY.md  codecov.yml  deny.toml
.github/workflows/: ci.yml  mirror.yml  release.yml
src/: lib.rs  main.rs
src/app/: audio.rs  keyboard.rs  mod.rs  video.rs
src/core/: audio.rs  bus.rs  debug.rs  machine.rs  mod.rs  sound.rs  video.rs
src/core/chips/: kr580vg75.rs  kr580vi53.rs  kr580vt57.rs  kr580vv55a.rs  mod.rs
src/core/peripherals/: keyboard.rs  midi.rs  mod.rs  romdisk.rs
tests/: e2e.rs
tests/assets/: README  ducks.rka  dvigalka.rka  kindzadza.rka  kletavt.rka  rc.rka  robocop.rka
tests/dumps/ducks/: ducks_frame_102678805.json  ducks_frame_20925142.json  ducks_frame_37040854.json  ducks_frame_47448915.json  ducks_frame_9985480.json
tests/dumps/dvigalka/: dvigalka_frame_13542218.json  dvigalka_frame_20580454.json  dvigalka_frame_32737419.json  dvigalka_frame_32808507.json  dvigalka_frame_33199518.json  dvigalka_frame_33448346.json  dvigalka_frame_33839361.json  dvigalka_frame_33946001.json  dvigalka_frame_45783039.json  dvigalka_frame_56873612.json  dvigalka_frame_5721950.json  dvigalka_frame_64587232.json  dvigalka_frame_69386026.json  dvigalka_frame_69705949.json  dvigalka_frame_69812587.json  dvigalka_frame_78557064.json  dvigalka_frame_79303544.json  dvigalka_frame_80654320.json  dvigalka_frame_89967544.json
tests/dumps/kindzadza/: kindzadza_frame_10343012.json  kindzadza_frame_20495140.json  kindzadza_frame_21973886.json  kindzadza_frame_24391054.json  kindzadza_frame_28343846.json  kindzadza_frame_33718500.json  kindzadza_frame_34713810.json  kindzadza_frame_35566934.json  kindzadza_frame_36789733.json  kindzadza_frame_6020537.json  kindzadza_frame_74469199.json
tests/dumps/kletavt/: kletavt_frame_12269651.json  kletavt_frame_13407141.json  kletavt_frame_13805257.json  kletavt_frame_26346121.json  kletavt_frame_3226572.json  kletavt_frame_37465120.json
tests/dumps/monitor/: monitor_frame_20260531.json  monitor_frame_70736804.json
tests/dumps/proverka/: proverka_frame_18376560.json  proverka_frame_540166079.json  (+6 more)
tests/replays/: ducks.json  dvigalka.json  kindzadza.json  kletavt.json  monitor.json  proverka.json  rc.json  robocop.json  tia2.json
(+29 files in other folders)
