[package]
name = "apogee-rs"
version = "0.1.5"
authors = [
    "René Coignard <contact@renecoignard.com>"
]
edition = "2024"
rust-version = "1.95"
license = "GPL-3.0-or-later"
description = "Apogee BK-01 emulator using the iz80 library"
homepage = "https://coignard.org/apogee"
repository = "https://github.com/coignard/apogee"
readme = "README"
keywords = ["emulator", "apogee", "kr580", "8080"]
categories = ["emulators"]
exclude = [".github/*"]

[dependencies]
anyhow = "1.0.102"
assert-json-diff = "2.0.2"
clap = { version = "4.6.1", features = ["derive"] }
cpal = "0.17.3"
crossbeam-channel = "0.5.15"
hex = "0.4.3"
image = "0.25.10"
iz80 = "0.4.4"
pixels = "0.17.1"
serde = { version = "1.0.228", features = ["derive"] }
serde-big-array = "0.5.1"
serde_json = "1.0.149"
sha2 = "0.11.0"
test-generator = "0.3.1"
winit = "0.30.13"

[patch.crates-io]
iz80 = { path = "iz80" }

[[bin]]
name = "apogee"
path = "src/main.rs"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
